[metadata]
name = port_steering
summary = OpenStack Neutron extension that enables steering packets from one port to another.
author = Ethan Van Der Heijden
python-requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages = port_steering

[entry_points]
neutron.service_plugins =
    port_steering = port_steering.plugin:PortSteeringPlugin
neutron.agent.l2.extensions =
    port_steering = port_steering.ovs_agent.extension:PortSteeringAgentExtension
