[package]
name = "bittorrent_offload"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-walkdir = "2.1.0"
axum = { version = "0.8.4", features = ["multipart"] }
clap = { version = "4.5.48", features = ["derive"] }
futures-lite = "2.6.0"
librqbit = "8.1.1"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["fs"] }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
zip = "4.2.0"
