[package]
name = "bittorrent_offload"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
clap = { version = "4.5.48", features = ["derive"] }
librqbit = "8.1.1"
mtzip = "4.0.3"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["fs"] }
tokio-util = "0.7.15"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
