[package]
name = "rdr_client_cache"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
http = "1.3.1"
http-body-util = "0.1.3"
http-cache = { version = "0.21.0", features = ["manager-cacache", "cacache-tokio", "bincode"], default-features = false }
http-cache-semantics = "2.1.0"
hudsucker = { version = "0.23.0", features = ["http2"] }
hyper = "1.6.0"
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.14", features = ["client", "client-legacy", "http1", "http2"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-socks = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
