[package]
name = "rdr_client_cache"
version.workspace = true
edition.workspace = true

[dependencies]
rdr_common = { path = "../rdr_common" }
anyhow = "1.0.98"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
http = "1.3.1"
http-body-util = "0.1.3"
http-cache-semantics = "2.1.0"
hudsucker = { version = "0.23.0", features = ["http2"] }
hyper = "1.6.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
http-cache = { version = "0.21.0", features = [
    "cacache",
    "cacache-tokio",
    "manager-cacache",
], default-features = false }
