[package]
name = "rdr_common"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bincode = { version = "2.0.1", features = ["serde"] }
http = "1.3.1"
http-cache = { version = "0.21.0", features = [
    "cacache",
    "cacache-tokio",
    "manager-cacache",
], default-features = false }
http-serde = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.46.1"
url = { version = "2.5.4", features = ["serde"] }
