[package]
name = "rdr_parent_cache"
version.workspace = true
edition.workspace = true

[dependencies]
rdr_common = { path="../rdr_common" }
clap = { version = "4.5.40", features = ["derive"] }
http = "1.3.1"
tokio = "1.46.1"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio", "tokio-runtime"] }
anyhow = "1.0.98"
futures = "0.3.31"
cookie = "0.18.1"
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
flate2 = "1.1.2"
