[package]
name = "video_transcoder"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6", features = ["http2", "server"] }
hyper-util = { version = "0.1.16", features = ["client", "client-legacy", "http1", "http2", "server-auto", "tokio"] }
tokio = { version = "1.47.0", features = ["macros", "net", "rt-multi-thread"] }
